fixed map size on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -353,7 +353,7 @@ hr {
 
     #main-map {
         float: none;
-        width: 100%;
+        width: 90%;
         height: auto;
         margin: auto;
         overflow: auto;
